pihole deployment added to homelab

--- a/.github/workflows/sync-config.yml
+++ b/.github/workflows/sync-config.yml
@@ -15,7 +15,7 @@ on:
         type: choice
         options:
           - homeassistant
-          # - pihole
+          - pihole
           # - openwrt
       force:
         description: 'Force sync (ignore conflicts)'
