--- a/site.yml
+++ b/site.yml
@@ -1,6 +1,13 @@
-- hosts: all
+- hosts: ha:ha_target
   gather_facts: true
   vars:
     ansible_python_interpreter: /usr/bin/python3
   roles:
     - homeassistant
+
+- hosts: pihole:pihole_target
+  gather_facts: true
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
+  roles:
+    - pihole
